<resources>
    <string name="app_name">Xposed-DataUsage</string>
    <string name="display">Display Settings</string>
    <string name="action_settings_changed">xposed-datausage.action.settings_changed</string>
    <string name="action_settings_relay_request">xposed-datausage.action.settings_relay_request</string>
    <string name="action_settings_relay_response">xposed-datausage.action.settings_relay_response</string>

    <string name="units">Units</string>
    <string name="units_summary">The units to use to format the data</string>

    <string name="decimal_places">Decimal places</string>
    <string name="decimal_places_summary">The number of decimal places to use</string>
</resources>
